fixed botchedfooter links

--- a/App/index.html
+++ b/App/index.html
@@ -79,23 +79,24 @@
                     </ul>
                     <ul>
                         <li class="header">Get involved</li>
-                        {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit a video{{/link-to}}
+                        {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit{{/link-to}}
                         {{#link-to "volunteer" classNames="footerLink" tagName="li"}}Volunteer{{/link-to}}
-                        {{#link-to "contact" classNames="footerLink" tagName="li"}}Get in touch{{/link-to}}
-                        {{#link-to "translate" classNames="footerLink" tagName="li"}}Translate this page{{/link-to}}
+                        {{#link-to "contact" classNames="footerLink" tagName="li"}}Contact{{/link-to}}
+                        <li class="footerLink"><a target="_blank" href="https://docs.google.com/forms/d/1hVjiergDRQouyebGRn7gpGguKfKITTqJ9ar82DweRmo/viewform">Translate this page</a></li>
                     </ul>
                     <ul>
                         <li class="header">Follow us</li>
-                        {{#link-to "youtube" classNames="footerLink" tagName="li"}}Youtube{{/link-to}}
-                        {{#link-to "facebook" classNames="footerLink" tagName="li"}}Facebook{{/link-to}}
-                        {{#link-to "twitter" classNames="footerLink" tagName="li"}}Twitter{{/link-to}}
-                        {{#link-to "tumblr" classNames="footerLink" tagName="li"}}Tumblr{{/link-to}}
-                        {{#link-to "instagram" classNames="footerLink" tagName="li"}}Instagram{{/link-to}}
+                        <li class="footerLink"><a target="_blank" href="https://youtube.com/user/WikiTongues">Youtube</a></li>
+                        <li class="footerLink"><a target="_blank" href="https://www.facebook.com/wikitongues">Facebook</a></li>
+                        <li class="footerLink"><a target="_blank" href="https://twitter.com/wikitongues">Twitter</a></li>
+                        <li class="footerLink"><a target="_blank" href="http://wikitongues.tumblr.com/">Tumblr</a></li>
+                        <li class="footerLink"><a target="_blank" href="http://instagram.com/wikitongues">Instragram</a></li>
                     </ul>
                 </div>
             </div>
           </footer>
         </script>
+
 
         <script type="text/x-handlebars" data-template-name="index">
           {{banner}}
@@ -145,6 +146,16 @@
 
         <script type="text/x-handlebars" data-template-name="press">
           <h1>press</h1>
+        </script>
+
+        <script type="text/x-handlebars" data-template-name="submit">
+          <h1>submit</h1>
+        </script>
+        <script type="text/x-handlebars" data-template-name="volunteer">
+          <h1>volunteer</h1>
+        </script>
+        <script type="text/x-handlebars" data-template-name="contact">
+          <h1>contact</h1>
         </script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
