--- a/App/index.html
+++ b/App/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,8 +15,6 @@
 
         <!-- App -->
         <script src="js/app.js"></script>
-        <script src="js/router.js"></script>
-        <script src="js/controller.js"></script>
 
         <!-- Style -->
         <link rel="stylesheet" href="css/nav.css">
@@ -27,137 +22,197 @@
         <link rel="stylesheet" href="css/banner.css">
         <link rel="stylesheet" href="css/page.css">
         <link rel="stylesheet" href="css/landingPage.css">
+        <link rel="stylesheet" href="css/team.css">
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,800' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,800' rel='stylesheet' type='text/css'>
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
         <script type="text/x-handlebars" data-template-name="application">
-          <nav>
-            <div class="logo">
-              {{#link-to "index" tagName="li"}}
-                <img src="img/horizontalLockup.svg" alt="Wikitongues">
-              {{/link-to}}
-            </div>
-
-            <ul class="top-nav">
-              {{#link-to "about" tagName="li"}}About{{/link-to}}
-              {{#link-to "team" tagName="li"}}Team{{/link-to}}
-              {{#link-to "expeditions" tagName="li"}}Expeditions{{/link-to}}
-              {{#link-to "projects" tagName="li"}}Projects{{/link-to}}
-              {{#link-to "get_involved" tagName="li"}}Get Involved{{/link-to}}
-            </ul>
-          </nav>
-
-          <div class="container">
-            {{outlet}}
-          </div>
-
-          <footer>
-            <div class="content-wrapper">
-                <a href="index.html" class="copyright">
-                    <p>© 2014 <img src="img/horizontalLockupWhite.svg" class="icon" alt=""></p>
-                    <p>Every language in the world</p>
-                    <p>All Rights Reserved</p>
-                </a>
-                <div class="links">
-                    <ul>
-                        <li class="header">Organization</li>
-                        {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
-                        {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
-                        {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}}
-                        {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}}
-                        {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}}
-                    </ul>
-                    <ul>
-                        <li class="header">Get involved</li>
-                        {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit{{/link-to}}
-                        {{#link-to "volunteer" classNames="footerLink" tagName="li"}}Volunteer{{/link-to}}
-                        {{#link-to "contact" classNames="footerLink" tagName="li"}}Contact{{/link-to}}
-                        <li class="footerLink"><a target="_blank" href="https://docs.google.com/forms/d/1hVjiergDRQouyebGRn7gpGguKfKITTqJ9ar82DweRmo/viewform">Translate this page</a></li>
-                    </ul>
-                    <ul>
-                        <li class="header">Follow us</li>
-                        <li class="footerLink"><a target="_blank" href="https://youtube.com/user/WikiTongues">Youtube</a></li>
-                        <li class="footerLink"><a target="_blank" href="https://www.facebook.com/wikitongues">Facebook</a></li>
-                        <li class="footerLink"><a target="_blank" href="https://twitter.com/wikitongues">Twitter</a></li>
-                        <li class="footerLink"><a target="_blank" href="http://wikitongues.tumblr.com/">Tumblr</a></li>
-                        <li class="footerLink"><a target="_blank" href="http://instagram.com/wikitongues">Instragram</a></li>
-                    </ul>
+              <nav>
+                <div class="logo">
+                  {{#link-to "index" tagName="li"}}
+                    <img src="img/horizontalLockup.svg" alt="Wikitongues">
+                  {{/link-to}}
                 </div>
-            </div>
-          </footer>
-        </script>
 
+                <ul class="top-nav">
+                  {{#link-to "about" tagName="li"}}About{{/link-to}}
+                  {{#link-to "team" tagName="li"}}Team{{/link-to}}
+                  {{#link-to "expeditions" tagName="li"}}Expeditions{{/link-to}}
+                  {{#link-to "projects" tagName="li"}}Projects{{/link-to}}
+                  {{#link-to "get_involved" tagName="li"}}Get Involved{{/link-to}}
+                </ul>
+              </nav>
+
+              <div class="container">
+                {{outlet}}
+              </div>
+
+              <footer>
+                <div class="content-wrapper">
+                    <a href="index.html" class="copyright">
+                        <p>© 2014 <img src="img/horizontalLockupWhite.svg" class="icon" alt=""></p>
+                        <p>Every language in the world</p>
+                        <p>All Rights Reserved</p>
+                    </a>
+                    <div class="links">
+                        <ul>
+                            <li class="header">Organization</li>
+                            {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
+                            {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
+                            {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}}
+                            {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}}
+                            {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}}
+                        </ul>
+                        <ul>
+                            <li class="header">Legal</li>
+                            {{#link-to "privacy" classNames="footerLink" tagName="li"}}Privacy Policy{{/link-to}}
+                            {{#link-to "terms" classNames="footerLink" tagName="li"}}Terms of Service{{/link-to}}
+                        </ul>
+                        <ul>
+                            <li class="header">Get involved</li>
+                            {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit{{/link-to}}
+                            {{#link-to "volunteer" classNames="footerLink" tagName="li"}}Volunteer{{/link-to}}
+                            {{#link-to "contact" classNames="footerLink" tagName="li"}}Contact{{/link-to}}
+                            <li class="footerLink"><a target="_blank" href="https://docs.google.com/forms/d/1hVjiergDRQouyebGRn7gpGguKfKITTqJ9ar82DweRmo/viewform">Translate this page</a></li>
+                        </ul>
+                        <ul>
+                            <li class="header">Follow us</li>
+                            <li class="footerLink"><a target="_blank" href="https://youtube.com/user/WikiTongues">Youtube</a></li>
+                            <li class="footerLink"><a target="_blank" href="https://www.facebook.com/wikitongues">Facebook</a></li>
+                            <li class="footerLink"><a target="_blank" href="https://twitter.com/wikitongues">Twitter</a></li>
+                            <li class="footerLink"><a target="_blank" href="http://wikitongues.tumblr.com/">Tumblr</a></li>
+                            <li class="footerLink"><a target="_blank" href="http://instagram.com/wikitongues">Instragram</a></li>
+                        </ul>
+                    </div>
+                </div>
+              </footer>
+        </script>
 
         <script type="text/x-handlebars" data-template-name="index">
-          {{banner-component statement=statement image=image}}
-          <section class="page">
-            <div class="information">
-                <h1>Explore the world through language</h1>
-                <!-- or "Discover the cultures of the world" -->
-                <a href="https://www.youtube.com/user/WikiTongues" target="_blank">
-                    <img src="img/scotsVideo.png" alt="">
-                    <p>Watch our videos on YouTube</p>
-                </a>
-                <br>
-                <p class="drop">Wikitongues is a global movement to reach every community on the planet. We firmly believe in the value of culture and the importance of language. </p>
-                <p>Join us in discovering every single language in the world!</p>
-            </div>
-            &nbsp;
-          </section>
+            {{#each}}
+                <section class="banner">
+                    <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
+                    <h1>{{text}}</h1>
+                </section>
+            {{/each}}
+            <section class="page">
+                <div class="information">
+                    <h1>Explore the world through language</h1>
+                    <!-- or "Discover the cultures of the world" -->
+                    <a href="https://www.youtube.com/user/WikiTongues" target="_blank">
+                        <img src="img/scotsVideo.png" alt="">
+                        <p>Watch our videos on YouTube</p>
+                    </a>
+                    <br>
+                    <p class="drop">Wikitongues is a global movement to reach every community on the planet. We firmly believe in the value of culture and the importance of language. </p>
+                    <p>Join us in discovering every single language in the world!</p>
+                </div>
+                &nbsp;
+              </section>
         </script>
-
         <script type="text/x-handlebars" data-template-name="components/banner-component">
-          <section class="banner">
-            <img {{bind-attr src="banner.image"}} alt="Wikitongues" class="fallback">
-            <h1>{{banner.statement}}</h1>
-          </section>
+              <section class="banner">
+                <img {{bind-attr src="banner.image"}} alt="Wikitongues" class="fallback">
+                <h1>{{banner.statement}}</h1>
+              </section>
         </script>
-
         <script type="text/x-handlebars" data-template-name="about">
-          <h1>about</h1>
+            {{#each}}
+                <section class="banner">
+                    <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
+                    <h1>{{text}}</h1>
+                </section>
+            {{/each}}
+            <section class="page">
+                <p class="drop">We are an international organizationof volunteers who fight to defend the value of identity, regardless of language or any other characteristic.</p>
+                <p class="quote">Our mission is to provide access to every language on earth, either spoken or signed.</p>
+                <p>The time has come for us, the people of Earth to become familiar with one another, to dispel the fear and doubt from others who, by simple distance, speak differently or hold other beliefs.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit sit doloremque repellendus laudantium vero nobis, deserunt delectus, non illum quos eaque reiciendis cupiditate, neque consequuntur temporibus ullam at excepturi, eius accusantium nostrum tempora veritatis dolor voluptate?</p>
+                <p>Quo, autem. Maxime error reprehenderit quam commodi itaque distinctio beatae consequatur odio laborum voluptate! Mollitia, cum, ex! Accusantium reiciendis ad praesentium esse alias est quidem doloribus, ipsum itaque quos fugiat sint rem consequuntur aliquid facilis voluptatem dolorum? Officia aliquam necessitatibus ratione quam neque, dolorem at delectus totam molestiae eos deleniti recusandae ea dignissimos id doloremque quasi ad expedita quo doloribus.</p>
+                <p>Ducimus magnam possimus dolor exercitationem vero quia, quaerat fuga eos, distinctio iste iure voluptatum aliquid sapiente maxime nihil eum labore, dicta beatae ut! Laudantium earum dolor tempore deserunt delectus suscipit rem unde quod, ex eveniet corrupti mollitia ut illo ad quos, nemo dolore esse sapiente. Eum, repellat.</p>
+                <img src="img/worldMap.jpg">
+                <p class="caption">Our oldschool map</p>
+                <p>Necessitatibus molestias eum, facilis mollitia obcaecati eos recusandae ipsum, numquam pariatur ratione deserunt labore harum officiis sunt minus cupiditate atque possimus nisi voluptas porro, tenetur beatae odio. Quae amet, commodi excepturi impedit! Aut maxime eos ducimus, officia pariatur repellat incidunt impedit ipsam officiis sint ea qui iusto, alias illo, reprehenderit tenetur ipsa esse quibusdam facere!</p>
+                <p>Saepe voluptate corporis ea molestiae totam sapiente libero expedita beatae! Animi nihil, ducimus ipsum tempora ullam quibusdam debitis, dignissimos, expedita necessitatibus dicta neque! Assumenda unde voluptates maiores explicabo repudiandae culpa quaerat, fugit quidem. Eligendi deserunt cum dignissimos, voluptatum a quasi iure odit dolorum culpa quia blanditiis sequi eum voluptatem! Reprehenderit dolorum modi aspernatur veniam, perspiciatis, iste quas perferendis quidem saepe distinctio corporis dolorem beatae, error mollitia eveniet dolore iusto aut labore quos veritatis eos minima recusandae animi? Voluptatem hic, assumenda et. Eius magni iusto explicabo ipsa omnis, cumque consequuntur.</p>
+                <p>Praesentium, libero impedit officia facilis consequatur sit ipsa adipisci vel velit consectetur, quod dolore obcaecati ea recusandae alias ab sapiente. Delectus doloremque, laboriosam? Adipisci quibusdam iure sunt commodi fugiat, cupiditate aperiam illum voluptas at optio eaque dolorem numquam, dignissimos nobis tempore dicta debitis. Temporibus aspernatur ab, cupiditate molestiae, ducimus, facilis tempora ullam fugiat obcaecati voluptas amet eligendi magni, possimus odit. Nulla, aliquam explicabo officia blanditiis praesentium magni quos reprehenderit, rem placeat molestias laudantium adipisci? Neque odit, optio aliquam libero repellat vel numquam ipsum atque accusamus obcaecati quam magnam quaerat vitae voluptate facilis sunt delectus sed vero eius nesciunt.</p>
+                <p>Excepturi obcaecati, quam quae quis vitae repellat ut, ipsam inventore error facilis in, atque id.</p>
+            </section>
         </script>
-
         <script type="text/x-handlebars" data-template-name="team">
-            <h1>team</h1>
-        </script>
+                <section class="banner team">
+                    <img src="img/worldMap2.png" alt="Wikitongues" class="fallback">
+                </section>
+                <section class="page">
+                    <div class="team">
+                        <h1 class="drop">Our team is composed of volunteers from all over the world</h1>
+                        <ul>
+                            {{#each}}
+                                <li>
+                                    <img {{bind-attr src="photo" title="name"}}>
+                                    <p>{{name}}</p>
+                                    <p class="country">{{location}}</p>
+                                </li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                </section>
 
+        </script>
         <script type="text/x-handlebars" data-template-name="expeditions">
-          <h1>expeditions</h1>
+              <section class="page">
+                  <h1>expeditions</h1>
+              </section>
         </script>
-
         <script type="text/x-handlebars" data-template-name="projects">
-          <h1>projects</h1>
+              <section class="page">
+                  <h1>projects</h1>
+              </section>
         </script>
-
         <script type="text/x-handlebars" data-template-name="get_involved">
-          <h1>get involved</h1>
+              <section class="page">
+                  <h1>get involved</h1>
+              </section>
         </script>
-
         <script type="text/x-handlebars" data-template-name="press">
-          <h1>press</h1>
+              <section class="page">
+                  <h1>press</h1>
+              </section>
         </script>
-
         <script type="text/x-handlebars" data-template-name="submit">
-          <h1>submit</h1>
+              <section class="page">
+                  <h1>submit</h1>
+              </section>
         </script>
         <script type="text/x-handlebars" data-template-name="volunteer">
-          <h1>volunteer</h1>
+              <section class="page">
+                  <h1>volunteer</h1>
+              </section>
         </script>
         <script type="text/x-handlebars" data-template-name="contact">
-          <h1>contact</h1>
+              <section class="page">
+                  <h1>contact</h1>
+              </section>
+        </script>
+        <script type="text/x-handlebars" data-template-name="privacy">
+              <section class="page">
+                  <h1>Privacy Policy</h1>
+                  <p>Wikitongues will never give or sell your personal information to any third-party organization or individual without your explicit consent.</p>
+              </section>
+        </script>
+        <script type="text/x-handlebars" data-template-name="terms">
+              <section class="page">
+                  <h1>Terms of Service</h1>
+                  <p>By submitting a video to Wikitongues, you hereby agree: (1) to have secured the consent of the individual or individuals who appear in that video to record them, (2) that you either possess or have obtained the legal rights to share this video online, and (3) that you irrevocably grant Wikitongues and its licensees, successors and assigns the right to license and distribute and use the video of you, including your voice, picture, portrait or likeness as captured in a still image from the footage, in any and all media and for any use whatsoever (except illegal or pornographic), including without limitation, Wikitongues, art, stock, advertising, trade and promotion, in perpetuity. If you should receive a copy of the footage, you shall only use it for your own personal use and you shall not authorize anyone else to use it. You agree and acknowledge that you have no commercial monetary rights to the footage and that Wikitongues owns all rights to the footage, including the right to copyright the footage.</p>
+              </section>
         </script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
