got rid of a lot of old stuff

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,800' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,800' rel='stylesheet' type='text/css'>
+
+        <!-- Favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="http://fredericoandrade.com/faviconV3.ico" />
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -97,7 +100,7 @@
                     <h1>New videos every week</h1>
                     <!-- or "Discover the cultures of the world" -->
                     <a href="https://www.youtube.com/user/WikiTongues" target="_blank">
-                        <img src="img/scotsVideo.png" alt="">
+                        <img src="img/youTubeLink.png" alt="">
                         <p>Join us on YouTube</p>
                     </a>
                     <br>
@@ -137,7 +140,6 @@
                 <section class="banner team">
                     {{google-maps latitude="20" longitude="0" markers=markers}}
                     {{!-- <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zJwV6XUktfg0.kEV6pWd8WZbM&key=AIzaSyDKZeAjJRXIyUIwn0L062uINzGdBu9fFsU" width="1280" height="600" frameborder="0" style="border:0"></iframe> --}}
-                    {{!-- <img src="img/worldMap2.png" alt="Wikitongues" class="fallback"> --}}
                 </section>
                 <section class="page">
                     <div class="team">
@@ -210,6 +212,8 @@
 
         <!-- Google Maps API -->
         <script src="http://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDKZeAjJRXIyUIwn0L062uINzGdBu9fFsU"></script>
+
+        <!-- Embedded map resize -->
         <!--script>
             function mapResize() {
                 var width = $(window).innerWidth()
