--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/page.css">
         <link rel="stylesheet" href="css/landingPage.css">
         <link rel="stylesheet" href="css/team.css">
+        <link rel="stylesheet" href="css/forms.css">
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,800' rel='stylesheet' type='text/css'>
@@ -181,7 +182,7 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="submit">
-              <section class="page">
+              <section class="page form">
                   <h1>Submit a video</h1>
                   <ul>
                     <li><input type="text" id="name" name="name" placeholder="Name"></li>
@@ -200,7 +201,7 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="volunteer">
-              <section class="page">
+              <section class="page form">
                   <h1>Become a volunteer</h1>
                   <input type="text" id="name" name="name" placeholder="Name">
                   <input type="text" id="email" name="email" placeholder="Email">
@@ -213,7 +214,7 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="contact">
-              <section class="page">
+              <section class="page form">
                   <h1>Contact</h1>
                   <input type="text" id="name" name="name" placeholder="Name">
                   <input type="text" id="email" name="email" placeholder="Email">
