--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </ul>
                         <ul>
                             <li class="header">Get involved</li>
-                            {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit{{/link-to}}
+                            {{#link-to "submit" classNames="footerLink" tagName="li"}}Submit a video{{/link-to}}
                             {{#link-to "volunteer" classNames="footerLink" tagName="li"}}Volunteer{{/link-to}}
                             {{#link-to "contact" classNames="footerLink" tagName="li"}}Contact{{/link-to}}
                             {{!-- <li class="footerLink"><a target="_blank" href="https://docs.google.com/forms/d/1hVjiergDRQouyebGRn7gpGguKfKITTqJ9ar82DweRmo/viewform">Translate this page</a></li> --}}
@@ -166,7 +166,7 @@
         <script type="text/x-handlebars" data-template-name="get_involved">
               <section class="page">
                   <h1>get involved</h1>
-                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit{{/link-to}}
+                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit a video{{/link-to}}
                   {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
                   {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
               </section>
@@ -179,7 +179,7 @@
         <script type="text/x-handlebars" data-template-name="submit">
               <section class="subheader">
                 <ul>
-                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit{{/link-to}}
+                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit  a video{{/link-to}}
                   {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
                   {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
                 </ul>
@@ -212,7 +212,7 @@
         <script type="text/x-handlebars" data-template-name="volunteer">
               <section class="subheader">
                 <ul>
-                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit{{/link-to}}
+                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit a video{{/link-to}}
                   {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
                   {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
                 </ul>
@@ -234,6 +234,13 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="contact">
+              <section class="subheader">
+                <ul>
+                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit  a video{{/link-to}}
+                  {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
+                  {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
+                </ul>
+              </section>
               <section class="page form">
                   <h1>Contact</h1>
                   <input type="text" id="name" name="name" placeholder="Name">
