--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                     <li>
                       <p>About you</p>
                     </li>
-                    <li><input type="text" id="name" name="name" placeholder="Your Name"></li>
-                    <li><input type="text" id="email" name="email" placeholder="Your Email"></li>
+                    <li><input type="text" id="name" name="name" placeholder="Name (Required)"></li>
+                    <li><input type="text" id="email" name="email" placeholder="Email (Required)"></li>
                     <li><input type="text" id="link" name="link" placeholder="Video File Link (Dropbox, Google Drive, Mediafire)"></li>
                     <li>
                       <p>About the speaker</p>
@@ -236,6 +236,7 @@
                   <p>About the video</p>
                   <textarea name="transcription" id="transcription" class="optional" placeholder="Transcribe the video (optional)"></textarea>
                   <textarea name="translation" id="translation" class="optional" placeholder="Translate the video (optional)"></textarea>
+                  <br>
                   <p>Leave us a message</p>
                   <textarea name="message" id="message" class="optional" placeholder="Message (optional)"></textarea>
                   <input type="submit" id="submit" class="submit" value="Send">
@@ -255,14 +256,20 @@
                   <p>Apply to join our community as a volunteer or ambassador</p>
                   {{#link-to "volunteerGuidelines" classNames="secondaryLink"}}Volunteering Guidelines{{/link-to}}
                   <ul>
-                    <li><input type="text" id="name" name="name" placeholder="Name"></li>
-                    <li><input type="text" id="email" name="email" placeholder="Email"></li>
+                    <li><p>About you</p></li>
+                    <li><input type="text" id="name" name="name" placeholder="Name (Required)"></li>
+                    <li><input type="text" id="email" name="email" placeholder="Email (Required)"></li>
+                    <li><input type="text" id="location" name="location" placeholder="Location (Required)"></li>
                   </ul>
                   <p>How would you like to contribute?</p>
-                  <label for="ambassador"><input type="checkbox" id="ambassador" name="check_list[]" value="Ambassador">Language Recording</label>
-                  <label for="socialMedia"><input type="checkbox" id="socialMedia" name="check_list[]" value="Social Media">Social Media</label>
-                  <label for="webDev"><input type="checkbox" id="webDev" name="check_list[]" value="Web Development">Web Development</label>
-                  <textarea name="message" id="message" placeholder="Tell us about yourself"></textarea>
+                  <ul>
+                    <li><label for="ambassador"><input type="checkbox" id="ambassador" name="check_list[]" value="Ambassador">Language Recording</label></li>
+                    <li><label for="socialMedia"><input type="checkbox" id="socialMedia" name="check_list[]" value="Social Media">Social Media</label></li>
+                    <li><label for="webDev"><input type="checkbox" id="webDev" name="check_list[]" value="Web Development">Web Development</label></li>
+                    <li><input type="text" id="otherVolunteer" name="" placeholder="Other (Please specify)"></li>
+                  </ul>
+                  <p>Please tell us a bit about yourself</p>
+                  <textarea name="message" id="message" placeholder="What do you do, "></textarea>
                   <input type="submit" id="submit"  class="submit" value="Send">
               </section>
         </script>
@@ -277,10 +284,13 @@
               </section>
               <section class="page form">
                   <h1>Contact</h1>
-                  <input type="text" id="name" name="name" placeholder="Name">
-                  <input type="text" id="email" name="email" placeholder="Email">
+                  <p>We're always eager to hear from you</p>
+                  <ul>
+                    <li><input type="text" id="name" name="name" placeholder="Name (Required)"></li>
+                    <li><input type="text" id="email" name="email" placeholder="Email (Required)"></li>
+                  </ul>
                   <textarea name="message" id="message" placeholder="Message"></textarea>
-                  <input type="text" id="submit"  class="submit" value="send">
+                  <input type="text" id="submit"  class="submit" value="Send">
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="privacy">
