--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                   {{/link-to}}
                 </div>
                 <ul class="top-nav">
+                  {{#link-to "index" tagName="li"}}Home{{/link-to}}
                   {{#link-to "about" tagName="li"}}About{{/link-to}}
                   {{!-- {{#link-to "team" className="team" tagName="li"}}Team{{/link-to}} --}}
                   {{!-- {{#link-to "mission" className="mission" tagName="li"}}Mission{{/link-to}} --}}
                   {{!-- {{#link-to "expeditions" tagName="li"}}Expeditions{{/link-to}} --}}{{!-- Expeditions should live inside of Projects --}}
-                  {{#link-to "projects" tagName="li"}}Projects{{/link-to}}
+                  {{!-- {{#link-to "projects" tagName="li"}}Projects{{/link-to}} --}}
                   {{#link-to "get_involved" tagName="li"}}Get Involved{{/link-to}}
                 </ul>
               </nav>
@@ -194,7 +195,8 @@
                 </ul>
               </section>
               <section class="page form">
-                  <h1>get involved</h1>
+                  <h1>Get involved</h1>
+                  <p>Wikitongues wouldn't be anywhere without our community. There are so many ways you can help out, or send us a message if you'd just like to reach out!</p>
                   <ul>
                     {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit a video{{/link-to}}
                     {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
@@ -332,8 +334,6 @@
             $(document).ready(mapResize)
             $(window).resize(mapResize)
         </script-->
-
-
 
          <!-- Ember -->
         <script src="js/libs/jquery-1.10.2.min.js"></script>
