--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <ul class="top-nav">
                   {{#link-to "index" tagName="li"}}Home{{/link-to}}
-                  {{#link-to "about" tagName="li"}}About{{/link-to}}
+                  {{#link-to "mission" tagName="li"}}About{{/link-to}}
                   {{!-- {{#link-to "team" className="team" tagName="li"}}Team{{/link-to}} --}}
                   {{!-- {{#link-to "mission" className="mission" tagName="li"}}Mission{{/link-to}} --}}
                   {{!-- {{#link-to "expeditions" tagName="li"}}Expeditions{{/link-to}} --}}{{!-- Expeditions should live inside of Projects --}}
@@ -55,10 +55,10 @@
                     <div class="links">
                         <ul>
                             <li class="header">Organization</li>
-                            {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
+                            {{#link-to "mission" classNames="footerLink" tagName="li"}}About{{/link-to}}
                             {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
-                            {{#link-to "mission" classNames="footerLink" tagName="li"}}Mission{{/link-to}}
-                            {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}}
+                            {{!-- {{#link-to "mission" classNames="footerLink" tagName="li"}}Mission{{/link-to}} --}}
+                            {{!-- {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}} --}}
                             {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}}
                             {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}}
                             {{#link-to "legal" classNames="footerLink" tagName="li"}}Legal{{/link-to}}
@@ -128,9 +128,8 @@
         <script  type="text/x-handlebars" data-template-name="components/about-subheader">
           <section class="subheader">
             <ul>
-              {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
-              {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
               {{#link-to "mission" className="footerLink" tagName="li"}}Mission{{/link-to}}
+              {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
               {{#link-to "projects" className="footerLink" tagName="li"}}Projects{{/link-to}}
             </ul>
           </section>
@@ -200,8 +199,10 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="projects">
+              {{about-subheader}}
               <section class="page">
-                  <h1>projects</h1>
+                  <h1>Projects</h1>
+                  {{#link-to "expeditions" classNames="subheaderLink" tagName="p"}}Expeditions{{/link-to}}
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="press">
