lotsa changes- remove old images, broke app.js into subfiles, moved wikitongues logos to logos folder

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <nav>
                 <div class="logo">
                   {{#link-to "index" tagName="li"}}
-                    <img src="img/horizontalLockup.svg" alt="Wikitongues">
+                    <img src="img/logos/horizontalLockup.svg" alt="Wikitongues">
                   {{/link-to}}
                 </div>
                 <ul class="top-nav">
@@ -48,7 +48,7 @@
               <footer>
                 <div class="content-wrapper">
                     <a href="index.html" class="copyright">
-                        <p>© 2014 <img src="img/horizontalLockupWhite.svg" class="icon" alt=""></p>
+                        <p>© 2014 <img src="img/logos/horizontalLockupWhite.svg" class="icon" alt=""></p>
                         <p class="footerLink">Every language in the world
                         <br>All Rights Reserved</p>
                     </a>
@@ -389,7 +389,15 @@
         <script src="js/libs/ember-data.js"></script>
 
         <!-- App -->
-        <script src="js/app.js"></script>
+        <script src="js/scripts/app.js"></script>
+        <script src="js/scripts/store.js"></script>
+        <script src="js/scripts/routes/router.js"></script>
+        <script src="js/scripts/routes/index-route.js"></script>
+        <script src="js/scripts/routes/mission-route.js"></script>
+        <script src="js/scripts/routes/about-route.js"></script>
+        <script src="js/scripts/routes/team-route.js"></script>
+        <script src="js/scripts/fixtures/team.js"></script>
+        <script src="js/scripts/components/google-maps-component.js"></script>
 
         <!-- Livereload -->
         <script src="http://localhost:35729/livereload.js"></script>
