--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <script src="js/scripts/templates.js"></script>
 
         <!-- Livereload -->
-        <script src="http://localhost:35729/livereload.js"></script>
+        <!-- <script src="http://localhost:35729/livereload.js"></script> -->
 
         <!-- Google Analytics -->
         <script>
@@ -48,7 +48,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='http://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            ga('create','UA-48869719-1');ga('send','pageview');
         </script>
     </body>
 </html>
