restructured js folder to use dist/src paradigm

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <script src="bower_components/ember-data/ember-data.js"></script>
 
         <!-- App -->
-        <script src="js/scripts/app.js"></script>
+        <script src="js/dist/app.js"></script>
 
         <!-- Compiled Templates -->
-        <script src="js/scripts/templates.js"></script>
+        <script src="js/dist/templates.js"></script>
 
         <!-- Livereload -->
         <script src="http://localhost:35729/livereload.js"></script>
